--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@
 *.tex
 *.aux
 *.log
+*.bbl
+*.blg
 auto
 *~
 *out
@@ -15,3 +17,4 @@ plotting-answers.R
 Sweavel.sty
 r-markdown/r-markdown-figure
 r-markdown/peng
+cache/
